cite/test/tests/ui/global-strict-fail/local_override_ignored.stderr
error: Citation content has changed!
                Referenced: old content
                Current: new content
 --> tests/ui/global-strict-fail/local_override_ignored.rs:5:1
  |
5 | #[cite(mock, changed = ("old content", "new content"), level = "WARN")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `cite` (in Nightly builds, run with -Z macro-backtrace for more info)
